--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 
+    <a href="6.html" class="btn top-right">REFERENCES</a>
+
     <h1 style="color: #faebd7;">Bayan at Kasaysayan</h1>
 
     <div class="circle"></div>
-    
-    <a href="2.html">
-    <button>
-        Click Here</button>
-    </a>
+
+    <a href="2.html" class="custom-button">Click Here</a>
+
     
 </body>
 </html>
